--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "gym-collision-avoidance"]
 	path = gym-collision-avoidance
-	url = ../gym-collision-avoidance.git
+	url = https://github.com/jguest2/gym-collision-avoidance.git
